<resources>
    <string name="app_name">flow_bus</string>
    <string name="sendglobalevent">send Global Event</string>
    <string name="fragment_second">Fragment Second</string>
    <string name="send_event_delay">send event delay</string>
    <string name="send_event_sticky">send event sticky to third screen</string>
    <string name="main_activity">Main Activity</string>
    <string name="go_to_third_screen">go to third screen</string>
    <string name="send_from_activity">send global from Activity to Third Screen</string>
    <string name="send_sticky_from_activity">send sticky from Activity</string>
    <string name="third_screen">Third Screen</string>
</resources>